--- a/src/rot13.h.in
+++ b/src/rot13.h.in
@@ -5,9 +5,6 @@
 
 #define SQLITE_ROT13_VERSION "@SQLITE_ROT13_VERSION@"
 
-int sqlite3_rot_init(
-    sqlite3 *db,
-    char **pzErrMsg,
-    const sqlite3_api_routines *pApi);
+int sqlite3_rot_init(sqlite3 *db, char **pzErrMsg, const sqlite3_api_routines *pApi);
 
-#endif // _SQLITE_ROT13_H
+#endif  // _SQLITE_ROT13_H
