--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -117,10 +117,24 @@ jobs:
       - run: make test-python python=/usr/local/opt/python@3/libexec/bin/python
   build-windows-x86_64-extension:
     runs-on: windows-2022
+    defaults:
+      run:
+        shell: msys2 {0}
     steps:
       - uses: actions/checkout@v3
         with:
           submodules: "recursive"
+      - name: "Setup MSYS2"
+        uses: msys2/setup-msys2@v2
+        with:
+          release: false
+          install: >-
+            curl
+            unzip
+            python3-pip
+            mingw-w64-x86_64-cmake
+            mingw-w64-x86_64-gcc
+      - run: ./vendor/windows_setup.sh
       - run: make loadable static
       - uses: actions/upload-artifact@v3
         with:
@@ -142,3 +156,19 @@ jobs:
         with:
           name: ${{ env.ARTIFACT-WINDOWS-X86_64-WHEELS }}
           path: dist/debug/wheels/*.whl
+ test-windows-x86_64:
+    runs-on: ubuntu-latest
+    needs: [build-windows-x86_64-extension, build-windows-x86_64-python]
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/download-artifact@v3
+        with:
+          name: ${{ env.ARTIFACT-WINDOWS-X86_64-EXTENSION }}
+          path: dist/debug/
+      - uses: actions/download-artifact@v3
+        with:
+          name: ${{ env.ARTIFACT-WINDOWS-X86_64-WHEELS }}
+          path: dist/debug/
+      - run: pip install --find-links dist/debug/ sqlite_rot13
+      - run: make test-loadable
+      - run: make test-python
