--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -117,7 +117,7 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: "3.10.8" # https://github.com/actions/setup-python/issues/540
-      - run: pip install --find-links dist/debug sqlite_rot13
+      - run: pip install --find-links dist/debug/ sqlite_rot13
       - run: find dist
       - run: make test-loadable
       - run: make test-python
