--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -113,7 +113,7 @@ jobs:
       - uses: actions/download-artifact@v3
         with:
           name: ${{ env.ARTIFACT-MACOS-X86_64-WHEELS }}
-          path: dist/debug/wheels
+          path: dist/debug/
       - uses: actions/setup-python@v4
         with:
           python-version: "3.10.8" # https://github.com/actions/setup-python/issues/540
