--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -68,19 +68,11 @@ jobs:
       - uses: actions/checkout@v3
         with:
           submodules: "recursive"
-      - name: Cache LLVM and Clang
-        id: cache-llvm
-        uses: actions/cache@v3
-        with:
-          path: |
-            ./llvm
-          key: llvm-16
-      - name: Install LLVM and Clang
-        uses: KyleMayes/install-llvm-action@v1
-        with:
-          version: "16.0"
-          cached: ${{ steps.cache-llvm.outputs.cache-hit }}
+      - run: brew install llvm
       - run: make loadable static
+        env:
+          CC: /usr/local/opt/llvm/bin/clang
+          CXX: /usr/local/opt/llvm/bin/clang++
       - uses: actions/upload-artifact@v3
         with:
           name: ${{ env.ARTIFACT-MACOS-X86_64-EXTENSION }}
