--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -68,6 +68,11 @@ jobs:
       - uses: actions/checkout@v3
         with:
           submodules: "recursive"
+      - name: Setup emsdk
+        uses: mymindstorm/setup-emsdk@v11
+        with:
+          version: 3.1.44
+          actions-cache-folder: "emsdk-cache"
       - run: sudo apt-get update -y && sudo apt-get install -y cmake
       - run: make wasm
   build-macos-x86_64-extension:
